# Amnezichat_Web

./: CONTRIBUTORS.md  CONTRIBUTORS_TR.md  Cargo.toml  Dockerfile  FEDIVERSE.yaml  PROTOCOL.md  PROTOCOL_TR.md  README.md  README_TR.md  gui.py
client/: .gitignore  Cargo.toml  Dockerfile  Rocket.toml
client/liboqs-rust/oqs/src/: kem.rs  sig.rs
client/src/: authentication.rs  encryption.rs  gui.rs  key_exchange.rs  key_operations.rs  main.rs  network_operations.rs
client/static/: app.js  index.html  styles.css
server/: Cargo.toml  Dockerfile  Rocket.toml
server/src/: encryption.rs  main.rs
server/static/: index.html  styles.css
src/: encryption.rs  main.rs
static/: index.html  styles.css
